# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md
scripts/: build_visual_studio.bat
src/: Game.cpp  main.cpp
src/gfx/: Renderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Square.cpp  Square.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  glutil.cpp  glutil.hpp
src/gfx/shaders/: fs.frag  fs1.frag  vs.vert
src/shader/: Basic.shader  fs1.frag  fs2.frag  vs.vert
